# eCTF-397-mp1

./: .gitignore  Cargo.toml  README.md  after.txt  before.txt  flake.nix  rust-toolchain-nightly.toml  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
