[package]
edition = "2024"
name = "eCTF-MP1"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
embassy-mspm0 = { git = "https://github.com/embassy-rs/embassy/", rev = "2b99999dea8f42dd08e44d2b42dd59eb1371edda", features = ["mspm0l2228pn", "defmt"] }
panic-halt = "1.0.0"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.0"}
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
panic-semihosting = "0.6.0"
rand_core = "0.9.3"

[profile.release]
debug = 2
